2006-04-16	Benedikt Meurer <benny@xfce.org>

	* docs/manual/C/exo-preferred-applications.xml.in: Update the
	  documentation date.

2006-04-16	Benedikt Meurer <benny@xfce.org>

	* NEWS: Update NEWS file for BETA1.
	* HACKING: Fix repository URL.
	* exo.spec.in, Makefile.am, configure.in.in: Drop spec file, as it is
	  totally outdated and unmaintained.

2006-04-15	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_layout_single_col): Apply patch
	  from Matt McClinch <mattmcclinch@gmail.com> to properly use the
	  calculated rowspan.
	* THANKS: Fix "Other contributors" section title.

2006-04-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Allow horizontal scrolling using the regular
	  mouse wheel when in EXO_ICON_VIEW_LAYOUT_COLS mode. Bug #1665.

2006-04-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Avoid calling size_allocate() again and again,
	  because of GtkScrolledWindow interaction (actually because GTK+ is
	  totally broken here).

2006-04-14	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.{c,h}, exo/exo.symbols: Add support for an
	  additional layout mode, which is similar to the list view in Windows
	  Explorer and lays out items in columns instead of rows, based on a
	  patch from Matt McClinch <mattmcclinch@gmail.com>.
	* docs/reference/: Update API docs.
	* po/libexo-0.3.pot, po/*.po: Merge new strings.

2006-04-11	Benedikt Meurer <benny@xfce.org>

	* python/pyexo.h: Work-around compile problem when glibc headers are
	  included before Pythons config file.

2006-04-11	Benedikt Meurer <benny@xfce.org>

	* python/: Update the Python bindings, including exo-url, exo-execute
	  and exo-binding. Update the Python examples.

2006-04-10	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_button_press_event),
	  exo/exo-icon-view.c(exo_icon_view_single_click_timeout): Apply patch
	  from Matt McClinch <mattmcclinch@gmail.com> to further improve
	  Shift-selection handling.
