@@ -83,7 +83,7 @@ dnl ***************************************
 AC_HEADER_STDC()
 AC_CHECK_HEADERS([assert.h errno.h fcntl.h fnmatch.h libintl.h locale.h math.h \
                   md5.h mmintrin.h regex.h string.h sys/resource.h sys/stat.h \
-                  sys/time.h sys/types.h time.h])
+                  sys/time.h sys/types.h sys/wait.h time.h])
 
 dnl ************************************
 dnl *** Check for standard functions ***
